עמוד חדש לטבלת המטריקס המלאה
סיכום
עמוד חדש לטבלת המטריקס המלאה:
יצירת העמוד החדש: matrix-full.html עם מטריקס 10 שורות × 10 עמודות.
תוכן מורחב לכל תא: הסברים על ספירות, ניסיונות אברהם, עשר המכות, חוקי הצלחה וכו'.
עיצוב: צבעים, כותרות ותיאורים ברורים.
קישור מדף הבית: כפתור "צפה במפה המלאה" ליד כותרת המטריקס.
תחביר HTML תקין ואין שגיאות לינט.
העמוד מוכן ומחובר לאתר.

--- a/index.html
+++ b/index.html
@@ -781,7 +781,13 @@
     <!-- Matrix Section -->
     <section class="matrix-section" id="matrix">
         <div class="container">
-            <h2 class="section-title">מטריקס הקבלות - עשרת הדיברות והקבלותיהן</h2>
+            <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 2rem;">
+                <h2 class="section-title" style="margin-bottom: 0;">מטריקס הקבלות - עשרת הדיברות והקבלותיהן</h2>
+                <a href="matrix-full.html" class="btn btn-primary" style="text-decoration: none;">
+                    <i class="fas fa-map"></i>
+                    צפה במפה המלאה
+                </a>
+            </div>
             <div class="matrix-actions">
                 <a href="matrix-print.html" target="_blank" class="btn btn-print">
                     <i class="fas fa-print"></i>
